Fixes #33, extra spacing beneath message form validation

--- a/www/sass/_steps.scss
+++ b/www/sass/_steps.scss
@@ -231,6 +231,7 @@ label small {
   border-top: 1px solid $brand-primary;
   background-color: #FFEFEF;
   color: $brand-primary;
+  margin-bottom: 0;
 
   p {
     margin-bottom:10px;
